ADD: integration test.